--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -45,6 +45,9 @@
     </div>
 
     <!-- NAVBAR AND TABS FOR USER INFORMATION -->
+    <div class="navbar"></div>
+    <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+
     <a class="back-icon" href="{{ url_for('admin.user_management') }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
@@ -55,7 +58,7 @@
         </li>
     </ul>
 
-    < <form action="{{ url_for('admin.user_info') }}" method="POST">
+    <form action="{{ url_for('admin.user_info') }}" method="POST">
         {{ UserForm.csrf_token }}
 
         <!-- USER ID -->
@@ -64,12 +67,9 @@
         </div>
         
         <!-- USER INFORMATION -->
-
         <div class="user-bg">
             <div class="group-info">
-
                 <div class="u_row firstRow">
-
                     <div class="inputBox fName">
                         <input type="text" required="required" name="first_name" value="{{ user[3] }}" disabled>
                         <span>FIRST NAME</span>
@@ -82,11 +82,9 @@
                         <input type="text" required="required" name="last_name" value="{{ user[5] }}" disabled>
                         <span>LAST NAME</span>
                     </div>
-                    
                 </div>
 
                 <div class="u_row secondRow">
-
                     <div class="inputBox username">
                         <input type="text" required="required" name="username" value="{{ user[1] }}" disabled>
                         <span>USERNAME</span>
@@ -95,16 +93,14 @@
                     <div class="inputBox gender">
                         <select class="gender" name="gender" required="required" disabled>
                             <option value="" disabled selected></option>
-                            <option value="male" {% if user[6] == "male" %} selected {% endif %}>Male</option>
-                            <option value="female" {% if user[6] == "female" %} selected {% endif %}>Female</option>
+                            <option value="MALE" {% if user[6] == "MALE" %} selected {% endif %}>MALE</option>
+                            <option value="FEMALE" {% if user[6] == "FEMALE" %} selected {% endif %}>FEMALE</option>
                         </select>
-                        <span>Gender</span>
+                        <span>GENDER</span>
                     </div>
-
                 </div>
 
                 <div class="u_row thirdRow">
-
                     <div class="inputBox password">
                         <input type="text" required="required" name="password" value="{{ user[2] }}" disabled>
                         <span>PASSWORD</span>
@@ -113,28 +109,22 @@
                     <div class="inputBox user_role">
                         <select class="user_role" name="user_role" required="required" disabled>
                             <option value="" disabled selected></option>
-                            <option value="doctor" {% if user[7] == "doctor" %} selected {% endif %}>Doctor</option>
-                            <option value="receptionist" {% if user[7] == "receptionist" %} selected {% endif %}>Receptionist</option>
-                            <option value="medtech" {% if user[7] == "medtech" %} selected {% endif %}>Medtech</option>
-                            <option value="admin" {% if user[7] == "admin" %} selected {% endif %}>Admin</option>
+                            <option value="doctor" {% if user[7] == "doctor" %} selected {% endif %}>doctor</option>
+                            <option value="receptionist" {% if user[7] == "receptionist" %} selected {% endif %}>receptionist</option>
+                            <option value="medtech" {% if user[7] == "medtech" %} selected {% endif %}>medtech</option>
+                            <option value="admin" {% if user[7] == "admin" %} selected {% endif %}>admin</option>
                         </select>
-                        <span>User Role</span>
+                        <span>USER ROLE</span>
                     </div>
-
                 </div>
-
             </div>
 
             <div class="btn-container">
                 <button class="btn-submit" type="submit" id="updateButton" style="display: none;">UPDATE</button>
             </div>
-
-            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
-
         </div>
     </form>
     
-
     {% if success %}
         <div id="successModal" class="modal" style="display: block;">
             <div class="modal-dialog">
