--- a/app/templates/admin/user_management/user_management.html
+++ b/app/templates/admin/user_management/user_management.html
@@ -42,7 +42,8 @@
         </ul>
     </div>
 
-
+    <div class="navbar"></div>
+    
     <!-- USER RECORD -->
     <div class="user-header">
         <p>USERS</p>
@@ -103,9 +104,6 @@
             </tbody>
         </table>
     </div>
-
-
-
 
     <!-- Confirmation Modal -->
     <div id="confirmationModal" class="modal" style="display: none;">
@@ -168,7 +166,6 @@
             <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
         </div>
     </a>
-
 
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src=" https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
