--- a/app/templates/doctor/patient/add_clearance.html
+++ b/app/templates/doctor/patient/add_clearance.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
-{% block title %}DocCare | Appointment{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}"> {% endblock %}
+{% block title %}DocCare | Assessment{% endblock title %}
+{% block link %} 
+    <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
+{% endblock %}
+
 {% block content %}
+
+    <!-- SIDE NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
@@ -22,16 +27,16 @@
                     <p>Calendar</p>
                 </li>
             </a>
-            <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
-                <p>Appointment</p>
-            </li>
-            <a href="{{ url_for('doctor.patient') }}">
+            <a href="{{ url_for('doctor.appointment') }}">
                 <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
-                    <p>Patient</p>
+                    <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
+                    <p>Appointment</p>
                 </li>
             </a>
+            <li class="selected-icon-bg">
+                <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
+                <p>Patient</p>
+            </li>
             <a href="{{ url_for('doctor.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
@@ -54,4 +59,18 @@
         </ul>
     </div>
 
+    <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
+    <div class="navbar"></div>
+    
+    <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">
+        <img src="{{ url_for('static', filename='images/Back.png') }}">
+    </a>
+
+    <ul class="nav nav-underline">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page">MEDICAL CLEARANCE</a>
+        </li>
+    </ul>
+
+    
 {% endblock %}
