--- a/app/templates/doctor/patient/lab_results.html
+++ b/app/templates/doctor/patient/lab_results.html
@@ -14,6 +14,9 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
+            <li class="notifications">
+                <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
+            </li>
             <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
@@ -59,6 +62,8 @@
     </div>
 
     <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
+    <div class="navbar"></div>
+    
     <a class="back-icon" href="{{ url_for('doctor.patient') }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
@@ -80,7 +85,6 @@
 
     <!-- LABORATORY RESULTS -->
     <div class="patient-bg">
-
         <div class="assessment-table">
             <table id="example" class="table table-striped" style="width:100%">
                 <thead>
@@ -117,7 +121,7 @@
 
     <a href="{{ url_for('doctor.labtest_request', patient_id=patient_id) }}">
         <div class="add-icon">
-            <img src="{{ url_for('static', filename='images/Request.png') }}">
+            <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
         </div>
     </a>
 
