--- a/app/templates/receptionist/dashboard.html
+++ b/app/templates/receptionist/dashboard.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Dashboard{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}"> {% endblock %}
+{% block link %} 
+    <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}"> 
+{% endblock %}
 
 {% block content %}
 
+    <!-- NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
+            <li class="notifications">
+                <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
+            </li>
             <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                 <p>Dashboard</p>
@@ -23,6 +29,12 @@
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
                     <p>Appointment</p>
+                </li>
+            </a>
+            <a href="{{ url_for('receptionist.patient') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
+                    <p>Patient</p>
                 </li>
             </a>
             <a href="{{ url_for('receptionist.profile') }}">
@@ -48,24 +60,18 @@
     </div>
 
     <!-- DASHBOARD -->
-    <main>
-        <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
-            <div class="greetings-name">
-                <p>Welcome,</p>
-                <h2>{{ info[0] }}</h2>
-            </div>
-            <div class="greetings">
-                <p>Have a nice day at work!</p>
-            </div>  
+    <div class="doctor-bg">
+        <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
+        <div class="greetings-name">
+            <p>Welcome,</p>
+            <h2>{{ info[0] }}</h2>
         </div>
-        <p class="date-time" id="demo"></p>
-        <ul class="appointment-nav">
-            <li class="appointment">BOOK AN APPOINTMENT</li>
-            <li class="appointment">RESCHEDULE APPOINTMENT</li>
-            <li class="appointment">CANCEL APPOINTMENT</li>
-        </ul> 
-    </main> 
+        <div class="greetings">
+            <p>Have a nice day at work!</p>
+        </div>  
+    </div>
+    <p class="date-time" id="demo"></p>
+    
 
     <script>
         // TO DISPLAY THE DATE
