--- a/app/templates/receptionist/patient.html
+++ b/app/templates/receptionist/patient.html
@@ -2,6 +2,7 @@
 {% block title %}DocCare | Patient{% endblock title %}
 {% block link %} 
     <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -15,19 +16,19 @@
             <li class="notifications">
                 <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
             </li>
-            <a href="{{ url_for('doctor.dashboard') }}">
+            <a href="{{ url_for('receptionist.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
                 </li>
-            </a>
-            <a href="{{ url_for('doctor.calendar') }}">
+            </a>   
+            <a href="{{ url_for('receptionist.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.appointment') }}">
+            <a href="{{ url_for('receptionist.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
                     <p>Appointment</p>
@@ -37,7 +38,7 @@
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('doctor.profile') }}">
+            <a href="{{ url_for('receptionist.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
@@ -45,10 +46,10 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Kurt.png') }}" class="user-img">
             <div>
                 <h3>{{ info[0] }}</h3>
-                <p>{{ info[2] }}</p>
+                <p>{{ info[1] }}</p>
             </div>
         </div>
         <ul>
@@ -89,7 +90,7 @@
                     <td>{{ patient[18] }}</td>
                     <td>
                         <!-- VIEW RECORD -->
-                        <form method="GET" action="/doctor/patient_record/">
+                        <form method="GET" action="/receptionist/patient_record/">
                             <div class="delete-icon">
                                 <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
                                 <button type="submit" style="background: none; border: none;">
@@ -100,7 +101,7 @@
                     </td>
                     <td>
                         <!-- DELETE RECORD -->
-                        <form id="deleteForm_{{ patient[0] }}" method="POST" action="/doctor/delete_patient/">
+                        <form id="deleteForm_{{ patient[0] }}" method="POST" action="/receptionist/delete_patient/">
                             <div class="delete-icon">
                                 <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
                                 <button type="button" onclick="confirmation('{{ patient[0] }}')" style="background: none; border: none;">
@@ -143,7 +144,7 @@
                     <div class="modal-body">
                         Patient's medical record has been deleted successfully!
                     </div>
-                    <a href="{{ url_for('doctor.patient') }}"> 
+                    <a href="{{ url_for('receptionist.patient') }}"> 
                         <div class="modal-footer">
                             <button id="successSave" type="button" class="btn-done">DONE</button>
                         </div>
@@ -161,7 +162,7 @@
                     <div class="modal-body">
                         Error in deleting patient record. Please try again.
                     </div>
-                    <a href="{{ url_for('doctor.patient') }}">
+                    <a href="{{ url_for('receptionist.patient') }}">
                         <div class="modal-footer">
                             <button id="errorDismiss" type="button" class="btn-done">OKAY</button>
                         </div>
@@ -171,7 +172,7 @@
         </div>
     {% endif %}
 
-    <a href="{{ url_for('doctor.add_patient') }}">
+    <a href="{{ url_for('receptionist.add_patient') }}">
         <div class="add-icon">
             <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
         </div>
