--- a/app/templates/receptionist/patient_record.html
+++ b/app/templates/receptionist/patient_record.html
@@ -2,11 +2,12 @@
 {% block title %}DocCare | Patient{% endblock title %}
 {% block link %} 
     <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}">
 {% endblock %}
 
 {% block content %}
 
-    <!-- SIDE NAVIGATION -->
+    <!-- NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
@@ -15,19 +16,19 @@
             <li class="notifications">
                 <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
             </li>
-            <a href="{{ url_for('doctor.dashboard') }}">
+            <a href="{{ url_for('receptionist.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
                 </li>
-            </a>
-            <a href="{{ url_for('doctor.calendar') }}">
+            </a>   
+            <a href="{{ url_for('receptionist.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.appointment') }}">
+            <a href="{{ url_for('receptionist.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
                     <p>Appointment</p>
@@ -37,7 +38,7 @@
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('doctor.profile') }}">
+            <a href="{{ url_for('receptionist.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
@@ -45,10 +46,10 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Kurt.png') }}" class="user-img">
             <div>
                 <h3>{{ info[0] }}</h3>
-                <p>{{ info[2] }}</p>
+                <p>{{ info[1] }}</p>
             </div>
         </div>
         <ul>
@@ -63,7 +64,7 @@
     <div class="navbar"></div>
     <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
     
-    <a class="back-icon" href="{{ url_for('doctor.patient') }}">
+    <a class="back-icon" href="{{ url_for('receptionist.patient') }}">
         <img src="{{ url_for('static', filename='images/Back.png') }}">
     </a>
 
@@ -71,18 +72,9 @@
         <li class="nav-item">
             <a class="nav-link active" aria-current="page">PATIENT INFORMATION</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.medical_history', patient_id=patient_id) }}">MEDICAL HISTORY</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">LABORATORY REPORTS</a>
-        </li>
     </ul>
 
-    <form action="{{ url_for('doctor.patient_record') }}" method="POST">
+    <form action="{{ url_for('receptionist.patient_record') }}" method="POST">
         {{ PatientForm.csrf_token }}
 
         <!-- PATIENT ID -->
@@ -285,7 +277,7 @@
                     <div class="modal-body">
                         Patient information updated successfully!
                     </div>
-                    <a href="{{ url_for('doctor.patient_record', patient_id=patient[0]) }}">
+                    <a href="{{ url_for('receptionist.patient_record', patient_id=patient[0]) }}">
                         <div class="modal-footer">
                             <button type="button" class="btn-done">DONE</button>
                         </div>
@@ -303,7 +295,7 @@
                     <div class="modal-body">
                         Error in saving changes for patient information!
                     </div>
-                    <a href="{{ url_for('doctor.patient_record', patient_id=patient[0]) }}">
+                    <a href="{{ url_for('receptionist.patient_record', patient_id=patient[0]) }}">
                         <div class="modal-footer">
                             <button type="button" class="btn-done">OKAY</button>
                         </div>
